# opensearch-operator

./: .coveragerc  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  actions.yaml  charm_version  charmcraft.yaml  cloud-init-user-data.yaml  cloudinit-userdata.yaml  config.yaml  deploy.sh  index.html  juju-crashdump-5a62e3a0-5d70-4cb7-8d6b-07b04b94f45d.tar.xz  last_written_value  lxd-profile.yaml  metadata.yaml  pyproject.toml  requirements.txt  requirements_integration.txt  requirements_integration_juju2.txt  requirements_integration_juju3.txt  requirements_juju2.txt  requirements_juju3.txt  setup.sh  test.py  tox.ini
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml
.github/workflows/: ci.yaml  integration-limited-juju3.yaml  integration.yaml  nightly.yaml  on_pull_request.yaml  on_push.yaml  pr.yaml  pre_integration_checks.yaml  release.yaml  scheduled-ci.yaml  scheduled_tests.yaml  sync-docs.yaml  sync_docs.yaml  sync_issue_to_jira.yaml  test.yaml  workflow.yaml
2346/: index.html
2346/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2346/export/: influxDbData.txt  prometheusData.txt
2346/history/: history-trend.json  history.json  retry-trend.json
2346/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
2360/: index.html
2360/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2360/export/: influxDbData.txt  prometheusData.txt
2360/history/: history.json
2360/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  suites.json  summary.json
2368/: index.html
2368/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2368/export/: influxDbData.txt  prometheusData.txt
2368/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
2368/widgets/: duration-trend.json  duration.json  executors.json  severity.json  suites.json  summary.json
2371/: index.html
2371/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2371/export/: influxDbData.txt  prometheusData.txt
2371/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
2371/widgets/: duration.json  executors.json  severity.json  suites.json  summary.json
2376/: index.html
2376/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2376/export/: influxDbData.txt  prometheusData.txt
2376/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
2376/widgets/: executors.json  retry-trend.json  (+4 more)
2382/: index.html
2388/: index.html
2395/: index.html
2401/: index.html
2403/: index.html
2422/: index.html
2428/: index.html
2440/: index.html
2453/: index.html
2463/: index.html
2464/: index.html
2465/: index.html
2482/: index.html
2501/: index.html
2509/: index.html
2518/: index.html
2545/: index.html
2552/: index.html
2553/: index.html
2566/: index.html
2570/: index.html
2580/: index.html
2591/: index.html
2592/: index.html
2593/: index.html
2599/: index.html
2610/: index.html
2616/: index.html
2617/: index.html
2620/: index.html
2634/: index.html
2643/: index.html
2664/: index.html
2668/: index.html
2693/: index.html
2698/: index.html
2703/: index.html
2721/: index.html
2735/: index.html
2755/: index.html
2773/: index.html
2788/: index.html
2790/: index.html
2792/: index.html
2802/: index.html
2811/: index.html
2813/: index.html
2826/: index.html
2835/: index.html
2836/: index.html
2845/: index.html
2870/: index.html
2876/: index.html
2877/: index.html
2890/: index.html
2895/: index.html
2896/: index.html
2897/: index.html
2901/: index.html
2904/: index.html
2913/: index.html
2928/: index.html
2929/: index.html
2930/: index.html
2931/: index.html
2934/: index.html
2935/: index.html
2940/: index.html
2941/: index.html
2953/: index.html
2958/: index.html
2963/: index.html
2968/: index.html
2986/: index.html
3005/: index.html
3016/: index.html
3041/: index.html
3047/: index.html
3054/: index.html
docs/: index.md  overview.md  revision-168.md
documentation/: documentation_landing.md  index.md  tutorial.md
src/: charm.py  dependency.json  lifecycle.py  machine_upgrade.py  opensearch.py  status_exception.py  upgrade.py  utils.py
templates/: jvm.options  opensearch.yml  sysctl.conf
tests/: conftest.py  helpers.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/: README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  tox.ini
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/.github/workflows/: ci.yaml  release.yaml  sync_docs.yaml  sync_issue_to_jira.yaml
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/lib/charms/data_platform_libs/v0/: data_interfaces.py  upgrade.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/lib/charms/operator_libs_linux/v2/: snap.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/lib/charms/rolling_ops/v0/: rollingops.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/src/: charm.py  literals.py  workload.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/src/core/: cluster.py  models.py  workload.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/src/events/: password_actions.py  requirer.py  tls.py
tests/integration/relations/opensearch_provider/opensearch-dashboards-operator/src/managers/: config.py  tls.py
(+27750 files in other folders)
