# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
# Charm is not packed as a standard Python package; this information is not used
name = "charm"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
ops = "^2.5.0"
tenacity = "^8.2.2"
boto3 = "^1.28.22"
jinja2 = "^3.1.2"
overrides = "7.4.0"
requests = "2.31.0"
# Official name: ruamel.yaml, but due to Poetry GH#109 - replace dots with dashs
ruamel-yaml = "0.17.35"
shortuuid = "1.0.11"
jproperties = "2.1.1"
pydantic = "^1.10, <2"
cryptography = "*"
jsonschema = "*"


[tool.poetry.group.charm-libs.dependencies]
# data_platform_libs/v0/data_interfaces.py
ops = ">=2.0.0"
# data_platform_libs/v0/upgrade.py
# grafana_agent/v0/cos_agent.py requires pydantic <2
poetry-core = "*"
pydantic = "^1.10, <2"
# tls_certificates_interface/v1/tls_certificates.py
cryptography = "*"
jsonschema = "*"
# grafana_agent/v0/cos_agent.py
cosl = ">=0.0.7"
bcrypt = "4.0.1"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
flake8-copyright = "^0.2.4"
flake8-builtins = "^2.1.0"
pyproject-flake8 = "^6.0.0.post1"
pep8-naming = "^0.13.3"
codespell = "^2.2.5"
shellcheck-py = "^0.9.0.5"

[tool.poetry.group.unit.dependencies]
juju = "^3.2.2"
pytest = "*"
pytest-asyncio = "<0.23"
pytest-mock = "^3.11.1"
coverage = {extras = ["toml"], version = "*"}
parameterized = "^0.9.0"

[tool.poetry.group.integration.dependencies]
pytest = "^7.4.0"
pytest-github-secrets = {git = "https://github.com/canonical/data-platform-workflows", tag = "v7.0.0", subdirectory = "python/pytest_plugins/github_secrets"}
pytest-asyncio = "<0.23"
pytest-operator = "^0.28.0"
pytest-operator-cache = {git = "https://github.com/canonical/data-platform-workflows", tag = "v7.0.0", subdirectory = "python/pytest_plugins/pytest_operator_cache"}
pytest-operator-groups = {git = "https://github.com/canonical/data-platform-workflows", tag = "v7.0.0", subdirectory = "python/pytest_plugins/pytest_operator_groups"}
juju = "3.2.3.0"
ops = "^2.5.0"
pytest-mock = "^3.11.1"
tenacity = "^8.2.2"
boto3 = "^1.28.22"
pyyaml = "^6.0.1"
urllib3 = "^1.26.16"
protobuf = "3.20.0"
opensearch-py = "*"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
markers = ["unstable"]

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"
